--- a/fryxbot-simulator.cabal
+++ b/fryxbot-simulator.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.2
 
--- This file has been generated from package.yaml by hpack version 0.37.0.
+-- This file has been generated from package.yaml by hpack version 0.38.1.
 --
 -- see: https://github.com/sol/hpack
 
@@ -32,7 +32,7 @@ library
       Field
       FieldParser
       Fryxbot
-      FryxbotSimulator
+      FryxbotWars
       Game
       Pos
       Team
