Moving simulator into shared library code.

--- a/fryxbots.cabal
+++ b/fryxbots.cabal
@@ -35,6 +35,7 @@ library
       Fryxbots.FieldParser
       Fryxbots.Game
       Fryxbots.Pos
+      Fryxbots.Simulator
       Fryxbots.Team
   other-modules:
       Paths_fryxbots
